--- a/CliTools/CliTools.csproj
+++ b/CliTools/CliTools.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="Cocona" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0-preview.3.24172.9" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0-preview.3.24172.9" />
   </ItemGroup>
 
 </Project>
